@@ -3,7 +3,7 @@ var util = require("util"),
 
 module.exports = BufferedStream;
 
-BufferedStream.defaultMaxSize = Math.pow(2, 16); // 64k
+BufferedStream.defaultMaxSize = Math.pow(2, 10); // 1k
 
 /**
  * A readable/writable Stream that buffers data until next tick.
@@ -17,7 +17,7 @@ function BufferedStream(maxSize, source, encoding) {
         maxSize = BufferedStream.defaultMaxSize;
     }
 
-    // This is not a hard limit. It's only used to indicate to other streams
+    // This is a soft limit. It's only used to indicate to other streams
     // writing to this one when they should pause.
     this.maxSize = maxSize;
 
@@ -33,26 +33,7 @@ function BufferedStream(maxSize, source, encoding) {
 
     process.nextTick(function tick() {
         if (self.readable || self._buffer.length) {
-            var wasFull = self.full;
-
-            var chunk;
-            while (self.readable && self._buffer.length && !self._wait) {
-                chunk = self._buffer.shift();
-
-                if (self.encoding) {
-                    self.emit("data", chunk.toString(self.encoding));
-                } else {
-                    self.emit("data", chunk);
-                }
-
-                self._size -= chunk.length;
-            }
-
-            // If the buffer was full but has some room now, emit "drain".
-            if (wasFull && !self.full) {
-                self.emit("drain");
-            }
-
+            self.flush();
             process.nextTick(tick);
         }
     });
@@ -125,6 +106,32 @@ BufferedStream.prototype.write = function write(chunk, encoding) {
     this._size += chunk.length;
 
     return !this.full;
+}
+
+/**
+ * Tries to emit all data that is currently in the buffer out to all `data`
+ * listeners. If this stream is not readable, has no data in the buffer, or is
+ * currently paused, this method does nothing. If any space is available in the
+ * buffer after flushing a `drain` event is emitted.
+ */
+BufferedStream.prototype.flush = function () {
+    var chunk;
+    while (this.readable && this._buffer.length && !this._wait) {
+        chunk = this._buffer.shift();
+
+        if (this.encoding) {
+            this.emit("data", chunk.toString(this.encoding));
+        } else {
+            this.emit("data", chunk);
+        }
+
+        this._size -= chunk.length;
+    }
+
+    // Emit "drain" if the buffer has some room.
+    if (!this.full) {
+        this.emit("drain");
+    }
 }
 
 /**
