@@ -1,12 +1,15 @@
 var url = require("url"),
     assert = require("assert"),
     EventEmitter = require("events").EventEmitter,
+    util = require("util"),
     strata = require("./index"),
+    BufferedStream = require("./bufferedstream"),
     lint = require("./lint"),
     utils = require("./utils");
 
 exports.env = makeEnv;
 exports.request = request;
+exports.stream = stream;
 
 /**
  * A wrapper for +strata.env+ that allows a URL string to be given as `opts`
@@ -42,14 +45,14 @@ function request(opts, app, callback) {
     app = app || utils.empty;
     callback = callback || function (status, headers, body) {};
 
-    if (opts.lint) {
-        app = lint(app);
-        delete opts.lint;
-    }
-
     // The app may be any object that has a toApp method (e.g. a Builder).
     if (typeof app.toApp == "function") {
         app = app.toApp();
+    }
+
+    if (opts.lint) {
+        app = lint(app);
+        delete opts.lint;
     }
 
     if (opts.stream) {
@@ -79,4 +82,35 @@ function request(opts, app, callback) {
             }
         });
     }
+}
+
+/**
+ * Returns a new FlushingStream that simply appends all data received to the
+ * `data` property of the given object. Useful for collecting the contents of
+ * streams when testing.
+ */
+function stream(obj) {
+    obj.data = "";
+
+    var stream = new FlushingStream;
+
+    stream.on("data", function (chunk) {
+        obj.data += chunk.toString();
+    });
+
+    return stream;
+}
+
+/**
+ * A subclass of BufferedStream that immediately flushes all writes.
+ */
+function FlushingStream() {
+    BufferedStream.apply(this, arguments);
+}
+
+util.inherits(FlushingStream, BufferedStream);
+
+FlushingStream.prototype.write = function () {
+    BufferedStream.prototype.write.apply(this, arguments);
+    this.flush();
 }
